# trivy

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  report.tpl  setup.cfg  task.sh  task_config.yaml  test.bats
src/: Dockerfile  requirements.txt  task.py  task.sh  test_task.py
