[metadata]
name = Trivy
# Version needs regex in setup.py.
url = https://github.com/githaxs/trivy
project_urls =
    Documentation = https://githaxs.com
    Code = https://github.com/githaxs/trivy
    Issue tracker = https://github.com/githaxs/trivy/issues
license = BSD-3-Clause
author = Gabe Levasseur
author_email = hello@githaxs.com
maintainer = Gabe Levasseur
maintainer_email = hello@githaxs.com
description = A simple and comprehensive vulnerability/misconfiguration scanner for containers and other artifacts.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: API Environment
    Intended Audience :: Developers
    License :: Apache 2.0
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = src
filterwarnings =
    error

[coverage:run]
branch = True
source =
    src

[coverage:paths]
source =
    src

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/base_task/__init__.py: F401